Add Contact Details

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,9 @@
 .contact-grid p {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
+  width: '75%';
+  margin: 'auto';
+  padding-top: '1em';
 }
 
 .contact-grid hr {
@@ -64,13 +67,6 @@
   width: 50%;
   margin: auto;
 }
-
-.contact-list i {
-  font-size: 66px;
-  padding-right: 5rem;
-}
-
-
 /* contact page css */
 
 .avatar-img {
