--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,7 @@
 }
 
 .landing-grid {
-  background: #833ab4;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: rgb(255,255,255);
   text-align: center;
   position: fixed;
   top: 0;
@@ -33,7 +31,7 @@
 
 .contact-body {
   margin: auto;
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100%;
   justify-content: center;
@@ -75,11 +73,16 @@
 }
 
 .banner-text {
-  background-color: black;
+  background: rgb(0,0,255);
+  background: -moz-linear-gradient(120deg, rgba(0,0,255,1) 0%, rgba(255,0,0,1) 100%);
+  background: -webkit-linear-gradient(120deg, rgba(0,0,255,1) 0%, rgba(255,0,0,1) 100%);
+  background: linear-gradient(120deg, rgba(0,0,255,1) 0%, rgba(255,0,0,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0000ff",endColorstr="#ff0000",GradientType=1);
+
   opacity: .8;
   width: 75%;
   margin: auto;
-  border-radius: 10px;
+  border-radius: 50px;
 }
 
 .banner-text h1 {
@@ -108,7 +111,7 @@
 }
 
 .social-links i {
-  color: white;
+  color: blue;
   font-size: 5em;
   padding: 8px;
 }
